objects/Verticali__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>EmailAdmin__c</fullName>
        <label>EmailAdmin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_CC__c</fullName>
        <defaultValue>&apos;dl-it-atos-oftibco@atos.net&apos;</defaultValue>
        <description>dl-it-atos-oftibco@atos.net</description>
        <label>Email_CC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>&apos;openfiber.itsupport@enel.com&apos;</defaultValue>
        <description>Openfiber.itsupport@enel.com</description>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_from__c</fullName>
        <defaultValue>&apos;Delivery Services Openfiber&apos;</defaultValue>
        <label>Email_from</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecorTypesList__c</fullName>
        <description>All&apos;interno sono presenti i Record Type dei CEI separati da una virgola per effettuare la sincronizzazione verso il BILLING. Il nome deve essere compreso tra singoli apici</description>
        <label>RecorTypesList</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypesAssets__c</fullName>
        <label>RecordTypesAssets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceList__c</fullName>
        <label>ServiceList</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextBody2__c</fullName>
        <defaultValue>&apos;Si chiede di rispondere con l’estrazione mantenendo tutti in TO.&apos;</defaultValue>
        <label>TextBody2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TextBody__c</fullName>
        <defaultValue>&quot;Ciao,in allegato il file contenente gli ID Risorsa CRM, per i quali vi chiedo cortesemente l estrazione dei dati toponomastici, gli identificativi building, palazzina e scala, secondo il tracciato condiviso.&quot;</defaultValue>
        <label>TextBody</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>attachLimit__c</fullName>
        <defaultValue>50000</defaultValue>
        <label>attachLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>callWsBillingBatchSize__c</fullName>
        <inlineHelpText>Definisce quanti batch del billing che inviano le notifiche devono stare in esecuzione contemporaneamente</inlineHelpText>
        <label>callWsBillingBatchSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>createNotifyBatchLimit__c</fullName>
        <inlineHelpText>limit usato nello start del batch di creazione notifiche per il billing</inlineHelpText>
        <label>createNotifyBatchLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>delayAlgoritmo__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Il valore contenuto in questo campo rappresenta i minuti di delay utilizzato per lo scheduling del batch dell&apos;algoritmo</description>
        <label>delayAlgoritmo</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>delayBonifica__c</fullName>
        <defaultValue>240</defaultValue>
        <description>il valore indica i minuti con cui viene schedulata la classe di bonifica finale del processo</description>
        <label>delayBonifica</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>emailSubject__c</fullName>
        <defaultValue>&apos;Estrazione PNI per Verticali &apos;</defaultValue>
        <label>emailSubject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>giorniTolleranza__c</fullName>
        <defaultValue>-2</defaultValue>
        <label>giorniTolleranza</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>limitBatch__c</fullName>
        <defaultValue>10</defaultValue>
        <description>limite di righe elaborate per singolo run del batch dell&apos;algoritmo</description>
        <label>limitBatch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>step1ScopeSize__c</fullName>
        <defaultValue>1000</defaultValue>
        <label>step1ScopeSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>step3ScopeSize__c</fullName>
        <defaultValue>60</defaultValue>
        <label>step3ScopeSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Verticali</label>
</CustomObject>